# GithubWorkflowTool

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  LIMITATIONS.md  PROJECT_SUMMARY.md  README.md  STATUS.md  USAGE.md  conanfile.txt
.github/workflows/: ci.yml
examples/: DOCTOR_TEST_SCENARIOS.md  README.md  example-workflow.yml  workflow-with-limitations.yml
include/backends/: ContainerBackend.h  ExecutionBackend.h  QemuBackend.h
include/cli/: CommandHandler.h
include/core/: ArtifactManager.h  CacheManager.h  JobExecutor.h  MatrixStrategy.h  RepoManager.h  StorageProvider.h  WorkflowDiscovery.h  WorkflowParser.h
include/gui/: JobView.h  MainWindow.h  WorkflowView.h
src/backends/: ContainerBackend.cpp  QemuBackend.cpp
src/cli/: CommandHandler.cpp  main.cpp
src/core/: ArtifactManager.cpp  CacheManager.cpp  JobExecutor.cpp  MatrixStrategy.cpp  RepoManager.cpp  StorageProvider.cpp  WorkflowDiscovery.cpp  WorkflowParser.cpp
src/gui/: JobView.cpp  MainWindow.cpp  WorkflowView.cpp  main.cpp
tlaplus/: README.md
